新增登陆页面

--- a/pages/login.html
+++ b/pages/login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hapi.admin</title>
+    <title>Hapi CRM</title>
 </head>
+
 <body>
     <div id="root"></div>
-<script type="text/javascript" src="hapidog.bundle.9853c041f021101cbb1e.js"></script></body>
+</body>
+
 </html>
